--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   PTP_9_0_0.tar.xz: 9954082421fc3f184def89765d8025324c4fdadf
+  org.eclipse.ptp-9bb29a9a48849f848111613a27a5dff793123e83.tar.bz2: e52a4bc68f93fe36c28a22d4f607d8a309951fa0
